err/django-vintage.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_formfield-0.4.egg-info'...
Listing './lib/python3.5/site-packages/django_vintage-0.3.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/example/simpleapp'...
Compiling './lib/python3.5/site-packages/example/simpleapp/urls.py'...
***   File "./lib/python3.5/site-packages/example/simpleapp/urls.py", line 11
    }, name="simplemodel_detail")
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/formfield'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vintage'...
Compiling './lib/python3.5/site-packages/vintage/archiveurl.py'...
***   File "./lib/python3.5/site-packages/vintage/archiveurl.py", line 31
    except URLError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vintage/templates'...
Listing './lib/python3.5/site-packages/vintage/templates/admin'...
Listing './lib/python3.5/site-packages/vintage/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/vintage/templates/vintage'...
Listing './lib/python3.5/site-packages/vintage/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
